Add state management and real DAQ support
- Convert radio buttons to checkboxes for multiple pin selection
- Add StateManager class for saving/loading configuration
- Implement persistent storage of pin names and calibration data
- Add Save Settings button for manual state saving
- Add real DAQ interface support for NI-DAQmx, Measurement Computing, and Advantech devices
- Update requirements.txt with DAQ driver dependencies
- Add DAQ installation guide to README
- Auto-save state on application close and after calibration changes

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,13 @@ PyQt5>=5.15.0
 pyqtgraph>=0.12.0
 numpy>=1.21.0
 matplotlib>=3.5.0
+
+# DAQ Libraries (install based on your DAQ device)
+# For National Instruments DAQ devices:
+# nidaqmx>=0.6.4
+
+# For Measurement Computing DAQ devices:
+# mcculw>=1.0.0
+
+# For generic USB DAQ devices:
+# pyusb>=1.2.1
