--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
 # DAQ Pressure Sensor Monitor Dependencies (Ubuntu/Linux)
 # Install with: pip install -r requirements.txt
 
+# GUI Framework
 PyQt5>=5.15.0
 pyqtgraph>=0.12.0
 numpy>=1.21.0
 matplotlib>=3.5.0
 
-# Ubuntu/Linux DAQ support
+# DAQ Hardware Support (Ubuntu/Linux)
 pyusb>=1.2.1
 pyserial>=3.5
 hidapi>=0.12.0
+
+# Optional: For better USB device information
+# libusb1>=1.9.3
