--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,10 @@ pyqtgraph>=0.12.0
 numpy>=1.21.0
 matplotlib>=3.5.0
 
-# DAQ Hardware Support (Ubuntu/Linux)
+# MCC DAQ Hardware Support (Primary)
+uldaq>=1.2.0
+
+# Fallback DAQ Support
 pyusb>=1.2.1
 pyserial>=3.5
 hidapi>=0.12.0
